--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <style>
+      nav {
+        background-color: lightgray;
+      }
+
+      nav ul {
+        list-style-type: none;
+        padding: 0;
+        display: flex;
+      }
+
+      nav a {
+        color: black;
+        text-decoration: none;
+        padding: 14px 24px;
+        font-size: 1.2rem;
+        display: block;
+      }
+
+      nav a:hover {
+        background-color: grey;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <h1>About page</h1>
+    <h1>Basic Informational Site</h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact-me">Contact Me</a></li>
+      </ul>
+    </nav>
     <p>This web application has been created and serve using NodeJS!</p>
     <p>
       You can
