--- a/pages/about.html
+++ b/pages/about.html
@@ -38,6 +38,7 @@
         <li><a href="/contact-me">Contact Me</a></li>
       </ul>
     </nav>
+    <h2>About</h2>
     <p>This web application has been created and serve using NodeJS!</p>
     <p>
       You can
